--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/themsfqg/repositories/wbfj 
-    - /bin/cp * $DEPLOYPATH
+    - export DEPLOYPATH=/home/themsfqg/repositories/wbfj/
+    - /bin/cp -R * $DEPLOYPATH
